# yew-test

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  package.json  pnpm-lock.yaml  postcss.config.js  tailwind.config.js
public/fonts/: BRHendrix-Regular.eot  BRHendrix-SemiBold.eot
scripts/: tailwindcss-build.sh
src/: app.rs
src/components/: avatar.rs  avatar.scss  button.rs  button.scss  header.rs  icon.rs  mod.rs  mod.scss
src/styles/: _fonts.scss  index.scss
